@@ -16,5 +16,6 @@ extern int nsp_inv(NspMatrix *A) ;
 extern double nsp_norm(NspMatrix *A,char flag);
 extern int nsp_balanc(NspMatrix *A,NspMatrix **D);
 extern int nsp_gbalanc(NspMatrix *A,NspMatrix *B,NspMatrix **X,NspMatrix **Y);
+extern int nsp_hess(NspMatrix *A,NspMatrix **U) ;
 
 #endif 
